# attendance_marker

./: app.py  hash_password.py  main.py  piccolo_conf.py  pyproject.toml  requirements.txt  setting.py  utils.py
home/: tables.py
home/piccolo_migrations/: home_2024_03_25t10_07_15_090812.py  home_2024_03_25t10_21_08_749032.py  home_2024_03_25t10_22_28_820958.py  home_2024_03_25t10_45_17_930697.py  home_2024_03_25t10_46_06_422641.py  home_2024_03_25t11_04_04_005804.py  home_2024_03_25t11_58_27_778807.py  home_2024_03_25t12_00_13_461554.py  home_2024_03_25t12_29_51_043238.py  home_2024_03_25t18_00_52_638746.py  home_2024_03_26t16_42_05_130444.py  home_2024_03_27t13_15_02_886547.py  home_2024_03_28t18_22_41_452549.py  home_2024_03_28t20_49_58_701996.py  home_2024_03_28t21_36_37_261770.py  home_2024_03_28t22_31_01_572714.py  home_2024_03_30t21_07_26_870488.py  home_2024_03_30t21_11_07_702524.py
