[tool.poetry]
name = "amit-pucchu"
version = "0.1.0"
description = ""
authors = ["AmitMonteage <amitsharan@monteage.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
piccolo = {extras = ["all"], version = "^1.5.0"}
bcrypt = "^4.1.2"
ipython = "^8.22.2"
hypercorn = "^0.16.0"
fastapi = "^0.110.0"
piccolo-admin = "^1.3.1"
piccolo-api = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
